# named-pipe-to-tcp-proxy

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs  named_pipe_server.rs  splice.rs
